--- a/src/components/TodoApp.module.css
+++ b/src/components/TodoApp.module.css
@@ -1,4 +1,3 @@
-
 header{
 background-color: palevioletred;
 font-size: 30px;
@@ -9,31 +8,6 @@ padding:'10px' ;
 box-sizing: border-box;
 padding: 15px;
 }
-
-.infoData {
-   display: flex;
-   justify-content: center;
-  }
-
-  .item{
-   margin-top: 50px;
-    margin: 10px;
-  }
-  .Topitem{
-  display: flex;
-    color: gray;
-    justify-content: center;
-  }
-
-  .items{
-    box-sizing: border-box;
-    margin-top: 50px;
-    margin: 10px;
-    width: 180px;
-  
-   padding-right: 80px;
-   
-  }
 
   button{
     background-color: lightseagreen;
@@ -59,23 +33,24 @@ padding: 15px;
     margin: 20px;
   }
 
-
-  .tasksDet{
+  div.ch:nth-child(odd) { /* Selects only odd elements */
     display: flex;
     font-weight: bold;
     justify-content: start;
     height: auto;
     max-width: 60%;
     margin: auto;
-   
-  }
- 
-
-  div.ch:nth-child(odd) { /* Selects only odd elements */
     background-color: lightgray;   
    
 }
- 
+div.ch:nth-child(even) { /* Selects only odd elements */
+  display: flex;
+  font-weight: bold;
+  justify-content: start;
+  height: auto;
+  max-width: 60%;
+  margin: auto;
+}
 
 .main{
   max-width: 60%;
